# hexamind

./: .env  .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_admin.md  cli.py  hxm_rag.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  requirements_env.txt  setup.py  sitemap.xml  styles.txt  test.py  tests.ipynb
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: elastic-ci.yml  python-ci.yml
ApiReference/initializer/: index.html
UserGuide/getting_started/: index.html
UserGuide/installation/: index.html
data/SGFGAS/: Circulaires EL.docx  Epargne-logement phase post épargne.docx  Epargne-logement phase épargne.docx  Epargne-logement phase épargnev2.docx  Fichier Quest lineaire nettoyé.docx  Présentation Epargne-logement.docx  Présentation Epargne-logementv2.docx
data/database/: chroma.sqlite3
data/test_data/: SampleDOCFile_500kb.doc  SampleData.xlsx  business-financial-data-december-2023-quarter-csv.csv  sample_doc.doc  sample_doc.docx  sample_html.html  sample_txt.txt
database_test/: chroma.sqlite3
docs/: index.md
docs/UserGuide/: getting_started.md  installation.md
hexamind/: __init__.py  cli.py
hexamind/database/: __init__.py
hexamind/initializer/: initializer.py
hexamind/llm/: __init__.py
hexamind/model/: __init__.py  document.py
hexamind/retriever/: retriever.py
hexamind/utils/: __init__.py
hexs_rag/: __init__.py
hexs_rag/initializer/: initializer.py
hexs_rag/llm/: __init__.py
hexs_rag/retriever/: retriever.py
hxm_rag/: requirements.txt
hxm_rag/initializer/: initializer.py
hxm_rag/retriever/: retriever.py  (+1 more)
search/: search_index.json
test/: conftest.py  test_main.py  test_secret.py  test_test.py
(+185 files in other folders)
