[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hexs_rag"
version = "0.1"
authors=[
    {name = "Julien Fresnel", email = "julien.fresnel@hexamind.ai"},
    {name = "Max Beales", email = "max.beales@hexamind.ai"}
]

dependencies = [
    # List of dependencies
]

[project.scripts]
hexsrag-env = "cli:main"
