[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hexamind"
version = "0.1"
description = "Hexamind library to implement RAG solutions"
readme = "README.md"
readme-content-type = "text/markdown"
requires-python = ">=3.10"
authors = [
    {name = "Julien Fresnel", email = "julien.fresnel@hexamind.ai"},
    {name = "Max Beales", email = "max.beales@hexamind.ai"}
]

[project.scripts]
hexamind-env = "cli.py:main"
