[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hexamind"
version = "0.1"
description = "Hexamind library to implement RAG solutions"
readme = "README.md"
readme-content-type = "text/markdown"
requires-python = ">=3.10"
authors = [
    {name = "Julien Fresnel", email = "julien.fresnel@hexamind.ai"},
    {name = "Max Beales", email = "max.beales@hexamind.ai"}
]

dependencies = [
        "beautifulsoup4==4.12.3",
        "chromadb==0.5.0",
        "elasticsearch==8.12.1",
        "mistralai==0.3.0",
        "openai==1.31.0",
        "python_docx==1.1.0",
        "Requests==2.32.3",
        "setuptools==68.2.2",
]

[project.scripts]
hexamind-env = "cli.py:main"
